# pretorin-cli

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODEX_AGENT_PLAN.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TODOS.md  docker-compose.yml  maintenance-checklist.md  pyproject.toml  ralph-checklist.md  server.json
.github/workflows/: docs-pages.yml  publish.yml  test.yml
docs/: CLI.md  MCP.md  book.toml  cmmc-l1-poam.md  cmmc-l1-ssp.md  llms-full.txt  llms.txt
docs/book/: 404.html  index.html  introduction.html  llms-full.txt  llms.txt  print.html  searcher-c2a407aa.js  searchindex-0040798b.js  searchindex-029c623e.js  searchindex-04e8400d.js  searchindex-1329692d.js  searchindex-14ccf727.js  searchindex-1bb20f3d.js  searchindex-1bee8e16.js  searchindex-209a4517.js  searchindex-220e8f5a.js  searchindex-25750a2b.js  searchindex-36696a2b.js  searchindex-4103e2a1.js  searchindex-5b7344a8.js  searchindex-62c2f507.js  searchindex-66ab15f6.js  searchindex-694685ba.js  searchindex-6c481a73.js  searchindex-771e8b47.js  searchindex-7f15c34b.js  searchindex-829ba4b6.js  searchindex-8aadf47a.js  searchindex-8f1d8054.js  searchindex-9d3c69a8.js  searchindex-a1aeef7d.js  searchindex-a2343a59.js  searchindex-a8894136.js  searchindex-ac12db2f.js  searchindex-b18112d0.js  searchindex-b9cb0ee1.js  searchindex-c3b532b7.js  searchindex-cc3f605d.js  searchindex-cdf57c42.js  searchindex-d0384e34.js  (+12 more)
docs/book/agent/: skills.html  (+2 more)
docs/rfcs/: 0001-recipes.md  draft-evidence-metadata.md
docs/src/: SUMMARY.md  introduction.md
docs/theme/: custom.css
pretorin-skill/: SKILL.md
pretorin-skill/examples/: cross-framework-mapping.md  gap-analysis.md
pretorin-skill/references/: artifact-schema.md  control-id-formats.md  framework-selection-guide.md  gap-analysis-workflow.md
scripts/: check.sh  demo-walkthrough.sh  docker-test.sh  docs-checklist.md  maintenance-checklist.md  ralph-docs.sh  ralph-maintenance.sh  ralph.sh
src/pretorin/: __init__.py  __main__.py  attestation.py  local_file.py  scope.py  utils.py
tests/: __init__.py  _synthetic_fixtures.py  conftest.py  test_agent_cli.py  test_agent_runner_coverage.py  test_agent_tools_coverage.py  test_ai_generation_coverage.py  test_analysis_prompts.py  test_animations.py  test_animations_coverage2.py  test_api_client.py  test_api_client_coverage2.py  test_api_client_provenance.py  test_api_client_revisions.py  test_artifact_validation.py  test_attestation.py  test_campaign_apply.py  test_campaign_cli.py  test_cli_agent_coverage.py  test_cli_auth_coverage.py  test_cli_auth_coverage2.py  test_cli_cci_coverage.py  test_cli_commands_coverage.py  test_cli_config_coverage.py  test_cli_context_coverage.py  test_cli_context_coverage2.py  test_cli_control_coverage.py  test_cli_evidence_capture.py  test_cli_evidence_coverage.py  test_cli_evidence_link_coverage.py  test_cli_evidence_required_type.py  test_cli_main_coverage.py  test_cli_monitoring_coverage.py  test_cli_narrative_coverage.py  test_cli_notes_coverage.py  test_cli_recipe.py  test_cli_review_coverage.py  test_cli_skill_coverage.py  test_cli_vendor_coverage.py  test_client_auth_coverage.py  (+57 more)
tests/evidence/: test_audit_metadata.py  test_capture.py  test_code_context.py  test_env_resolve.py  test_markdown.py  test_redact.py  test_snapshot.py  test_symbol_resolve.py
tests/frameworks/: test_custom_converters.py  test_export_oscal_cli.py  test_init_custom.py  test_oscal_converters.py  test_platform_cli.py  test_validate.py  test_validate_build_cli.py
tools/: build-docs.sh  check.sh  demo-walkthrough.sh  docker-test.sh  docs-checklist.md  maintenance-checklist.md  ralph.sh
(+263 files in other folders)
