[project]
name = "pretorin"
version = "0.1.0"
description = "CLI and MCP server for Pretorin Compliance API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Pretorin", email = "support@pretorin.com"}
]
keywords = [
    "compliance",
    "security",
    "nist",
    "fedramp",
    "cmmc",
    "soc2",
    "iso27001",
    "mcp",
    "cli",
    "oscal",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
pretorin = "pretorin.cli.main:app"

[project.urls]
Homepage = "https://pretorin.com"
Documentation = "https://docs.pretorin.com"
Repository = "https://github.com/pretorin-ai/pretorin-cli"
Changelog = "https://github.com/pretorin-ai/pretorin-cli/blob/main/CHANGELOG.md"
Issues = "https://github.com/pretorin-ai/pretorin-cli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pretorin"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: mark test as integration test (requires API key)",
]
